# netbox-inventory

./: .editorconfig  .gitignore  CONTRACT_IMPLEMENTATION.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: lint.yml  publish.yaml  release.yml  test.yml
netbox_inventory/: __init__.py  analyzers.py  choices.py  constants.py  filtersets.py  graphql.py  managers.py  models.py  navigation.py  search.py  signals.py  tables.py  template_content.py  urls.py  utils.py  version.py
netbox_inventory/api/: nested_serializers.py  serializers.py  urls.py  views.py
netbox_inventory/api/serializers_/: assets.py  audit.py  contracts.py  deliveries.py  nested.py  transit.py
netbox_inventory/forms/: __init__.py  assign.py  bulk.py  bulk_add.py  bulk_edit.py  bulk_import.py  consumable.py  create.py  fields.py  filters.py  models.py  reassign.py  widgets.py
netbox_inventory/graphql/: __init__.py  filters.py  schema.py  types.py
netbox_inventory/management/: __init__.py
netbox_inventory/management/commands/: __init__.py  check_asset_tags.py  update_contract_statuses.py
netbox_inventory/migrations/: 0001_initial.py  0001_initial_prod.py  0002_alter_asset_serial.py  0002_supplier_slug.py  0003_add_inventoryitemgroup.py  0003_alter_supplier_slug.py  0004_add_purchase.py  0004_inventoryitemgroup_tree.py  0005_alter_asset_asset_tag.py  0005_delivery_asset_delivery.py  0006_consumabletype_consumable.py  0006_purchase_status.py  0007_alter_asset_unique_together_and_more.py  0008_alter_asset_device_type_alter_asset_module_type.py  0009_add_rack.py  0010_asset_description_inventoryitemtype_description.py  0011_add_contract_model.py  0011_alter_asset_inventoryitem_type.py  0011_alter_supplier_options.py  0011_bom.py  0012_add_auditflow.py  0012_add_auditflowpage.py  0012_add_inventoryitem_group_inventoryitem_type.py  0012_asset_bom.py  0012_asset_contract_many_to_many.py  0012_contract_add_contact_field.py  0013_add_auditflow.py  0013_add_audittrail.py  0013_asset_contract.py  0013_asset_contract_many_to_many.py  0013_bom_purchase.py  0014_add_audittrailsource.py  0014_alter_asset_inventoryitem_type.py  0014_alter_auditflowpageassignment_flow.py  0014_alter_audittrail_object_type.py  0014_asset_contract_many_to_many.py  0014_remove_bom_purchase_purchase_boms.py  0015_add_inventoryitem_group_inventoryitem_type.py  0015_alter_asset_storage_location.py  0015_alter_delivery_options_and_more.py  (+7 more)
netbox_inventory/models/: __init__.py  assets.py  audit.py  contracts.py  deliveries.py  mixins.py  transit.py
netbox_inventory/templatetags/: scan_button.py
netbox_inventory/tests/: custom.py  settings.py  test_load.py
netbox_inventory/views/: __init__.py  asset.py  asset_assign.py  asset_bulk_assign.py  asset_create.py  asset_reassign.py  auditflow.py  auditflowpage.py  auditflowpageassignments.py  audittrail.py  audittrailsource.py  bom.py  bom_create.py  bulk_assign.py  consumable.py  consumable_quantity_edit.py  consumable_type.py  contract.py  courier.py  create_and_assign.py  delivery.py  inventoryitem_group.py  inventoryitem_type.py  purchase.py  purchase_create.py  supplier.py  tabs.py  transfer.py
scripts/: version-check.py
testing/: configuration.testing.py  configuration_testing.py
(+84 files in other folders)
