[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-inventory"
version = "3.1.0"
authors = [
  { name="Matej Vadnjal", email="matej.vadnjal@arnes.si" },
]
description = "Inventory asset management in NetBox"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["netbox", "netbox-plugin", "inventory"]

[project.urls]
"Homepage" = "https://github.com/ArnesSI/netbox-inventory/"
"Bug Tracker" = "https://github.com/ArnesSI/netbox-inventory/issues/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["netbox_inventory*"]

[tool.ruff.lint]
extend-select = ["E4", "E7", "E9", "F", "W", "C"]
ignore = ["F403", "F405"]

[tool.ruff.format]
quote-style = "single"

[tool.isort]
profile = "black"
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "NETBOX",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
known_first_party = ["netbox_inventory"]
known_netbox = [
    "netbox",
    "core",
    "dcim",
    "extras",
    "tenancy",
    "users",
    "utilities",
]
