[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-inventory"
version = "2.5.0"
authors = [
  { name="Matej Vadnjal", email="matej.vadnjal@arnes.si" },
]
description = "Inventory asset management in NetBox"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["netbox", "netbox-plugin", "inventory"]

[project.urls]
"Homepage" = "https://github.com/ArnesSI/netbox-inventory/"
"Bug Tracker" = "https://github.com/ArnesSI/netbox-inventory/issues/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["netbox_inventory*"]

[tool.ruff]
exclude = [
    "netbox_inventory/migrations",
]

[tool.ruff.lint]
extend-select = ["E4", "E7", "E9", "F", "W", "C", "I"]
ignore = ["F403", "F405"]

[tool.ruff.lint.isort]
known-local-folder = ["netbox_inventory"]
known-first-party = [
    "netbox",
    "core",
    "dcim",
    "extras",
    "tenancy",
    "users",
    "utilities",
]

[tool.ruff.format]
quote-style = "single"
